tests/semantic/fail/infixExp-3.tiger
let
      var x : string := ""
in
      x := "Hello" <> 1
end
